# parts

./: LICENSE  Makefile  README.md  _CoqProject
src/: dune  dune-project  runtime.ml
src/benchmarks/: bench_as.ml  bench_json.ml  bench_ppm.ml  bench_sexp.ml  benchmarks.ml  dune
src/benchmarks/data/: LICENSE
src/benchmarks/data/as/: as.20000  as.200000  as.30000  as.300000  as.40000  as.500000
src/tests/: dune  test_as.ml  test_full.ml  test_json.ml  test_lex.ml  test_parse.ml  test_parsers.ml  test_sexp.ml  utils.ml
theories/: Evaluators.v  ExampleParsers.v  Extract.v  FusionExample.v  Json.v  Machine.v  Opt.v  Tactics.v
